tests/toylang/neg/001285_mutation.toylang
program a = { then while a do sleep; } .
